# wamer_shim

./: .gitmodules  Cargo.toml
src/: instance.rs  lib.rs  main.rs  rlimit.rs
wamr_runtime_wrapper/: Cargo.toml
wamr_runtime_wrapper/src/: build.rs
